MODEXPW-582 - Replacing S3 clients to folio-s3-library (switching minio-embedded to localstack)